Phantom Cloak Damage Cap, Phantom Melding Removed, Scylla Rename, Firestorm / Mycoris Chance Buff, Icon Rendering Fix, Texture Edits